*Minour fix (cota knowme section on mobile bug fixed)

--- a/style.css
+++ b/style.css
@@ -902,6 +902,11 @@ textarea
         width: 70%;
     }
 
+    #Cota-KnowMe
+    {
+        width: 70%;
+    }
+
 /**RESPONSIVE SECTION EXPERIENCE**/
 
     #Experience-Info
